# neatracer

./: .gitmodules  CMakeLists.txt  init.py
code/client/: CMakeLists.txt
code/client/sources/: global.cpp  global.hpp  main.cpp  stategame.cpp  stategame.hpp  statemenu.cpp  statemenu.hpp
code/core/: CMakeLists.txt
code/core/include/nrr/core/: global.hpp  vehicle.hpp  world.hpp
